--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -25,6 +25,10 @@
           <ion-option *ngFor="let language of languages" [value]="language">{{language.display}}</ion-option>
         </ion-select>
       </ion-item>
+      <ion-item>
+        <ion-label>{{'sounds' | translate}}</ion-label>
+        <ion-toggle [(ngModel)]="sounds" (ngModelChange)="toggleSounds()"></ion-toggle>
+      </ion-item>
     </ion-item-group>
     <ion-item-group>
       <ion-item-divider color="light">{{'app_functions' | translate}} </ion-item-divider>
