Tech Settings major bug fix

--- a/src/pages/comment/comment.html
+++ b/src/pages/comment/comment.html
@@ -22,7 +22,7 @@
         <!-- <span class="comment-data">{{comment.user}}</span> -->
       </ion-item>
       <ion-item>
-        <ion-label floating>{{'message_subject' | translate}}</ion-label>
+        <ion-label>{{'message_subject' | translate}}</ion-label>
         <ion-input class="comment-subject" [(ngModel)]="comment.subject"></ion-input>
         <!-- <span class="comment-data">{{comment.subject}}</span> -->
       </ion-item>
