--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -117,6 +117,12 @@
     </ion-list>
   </ion-card>
   <p>
+      T   Training <br>
+      Q   Travel <br>
+      M   Training and Travel <br>
+      S   Standby for Duncan <br>
+      E   Sick Day or Sick Hrs <br>
+      H   Holiday <br>
   </p>
 </ion-content>
 <onsite-tabs></onsite-tabs>
