--- a/src/pages/developer/developer.html
+++ b/src/pages/developer/developer.html
@@ -15,7 +15,7 @@
     <ion-item-divider color="light">Developer Controls</ion-item-divider>
     <ion-item>
       <ion-label>Background Geolocation</ion-label>
-      <ion-toggle checked="GeolocStatus" [(ngModel)]="geolocToggle" (ionChange)="toggleBackgroundGeolocation()"></ion-toggle>
+      <ion-toggle [(ngModel)]="GeolocStatus" (ionChange)="toggleBackgroundGeolocation()"></ion-toggle>
     </ion-item>
   </ion-item-group>
   <ion-item-group>
