--- a/src/pages/report-history/report-history.html
+++ b/src/pages/report-history/report-history.html
@@ -8,6 +8,13 @@
 <ion-content padding [ngStyle]="{'margin-top': fixedHeight}"> -->
 <!-- <div #fixed ion-fixed></div> -->
 <ion-content padding>
+  <div class="report-history-container data-not-ready" *ngIf="!pageReady">
+    <ion-list class="reportList data-not-ready">
+      <ion-item class="report-history-list-item data-not-ready">
+        <p>{{'loading_data' | translate}}...</p>
+      </ion-item>
+    </ion-list>
+  </div>
   <div class="report-history-container" *ngIf="pageReady">
     <ion-list class="reportList">
       <ion-item-group class="report-history-group-date" *ngFor="let shift of shifts; let i=index">
