--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -116,7 +116,10 @@
       </ion-list-header>
     </ion-list>
   </ion-card>
+  <p class="home-grid-key-caption" *ngIf="dataReady">{{'letter_code' | translate}}</p>
   <ion-grid center class="home-grid-key" *ngIf="dataReady">
+    <!-- <ion-row class="home-grid-header-row">
+      <ion-col class="" -->
     <ion-row class="home-grid-row">
       <ion-col col-1 class="home-grid-col1">T</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_training' | translate}}</ion-col>
       <ion-col col-1 offset-1 class="home-grid-col1">Q</ion-col><ion-col col-4 class="home-grid-col4">{{'key_travel' | translate}}</ion-col>
@@ -130,6 +133,19 @@
       <ion-col col-1 offset-1 class="home-grid-col1">H</ion-col><ion-col col-4 class="home-grid-col4">{{'key_holiday' | translate}}</ion-col>
     </ion-row>
   </ion-grid>
+    <!-- <ion-row class="home-grid-row">
+      <ion-col col-1 class="home-grid-col1">T</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_training' | translate}}</ion-col>
+      <ion-col col-1 offset-1 class="home-grid-col1">Q</ion-col><ion-col col-4 class="home-grid-col4">{{'key_travel' | translate}}</ion-col>
+    </ion-row>
+    <ion-row class="home-grid-row">
+      <ion-col col-1 class="home-grid-col1">M</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_training_and_travel' | translate}}</ion-col>
+      <ion-col col-1 offset-1 class="home-grid-col1">S</ion-col><ion-col col-4 class="home-grid-col4">{{'key_standby_duncan' | translate}}</ion-col>
+    </ion-row>
+    <ion-row class="home-grid-row">
+      <ion-col col-1 class="home-grid-col1">E</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_sick_day_or_hours' | translate}}</ion-col>
+      <ion-col col-1 offset-1 class="home-grid-col1">H</ion-col><ion-col col-4 class="home-grid-col4">{{'key_holiday' | translate}}</ion-col>
+    </ion-row>
+  </ion-grid> -->
   <!-- <ion-grid center class="home-grid-key">
     <ion-row class="home-grid-row"><ion-col class="home-grid-col1">T</ion-col><ion-col class="home-grid-col2">Training</ion-col></ion-row>
     <ion-row class="home-grid-row"><ion-col class="home-grid-col1">Q</ion-col><ion-col class="home-grid-col2">Travel</ion-col></ion-row>
