--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -21,10 +21,12 @@
       <span class="shift-hours-header" [ngClass]="getShiftHoursStatus(selectedShift)" *ngIf="workOrderForm && workOrderForm.value && workOrderForm.value.selected_shift">
         <span class="shift-label">{{'shift' | translate}}</span> #<span class="shift-number">{{selectedShift.updateShiftNumber()}}</span>
       <span class="shift-label">{{'hours' | translate}}</span>:
-      <span class="shift-hours" *ngIf="mode==='Add'">{{shiftSavedHours+currentRepairHours}}</span>
-      <span class="shift-hours" *ngIf="mode==='Edit'">{{shiftSavedHours+currentRepairHours-thisWorkOrderContribution}}</span>
+      <span class="shift-hours" *ngIf="mode==='Add'">{{selectedShift.getNormalHours()+currentRepairHours}}</span>
+      <span class="shift-hours" *ngIf="mode==='Edit'">{{selectedShift.getNormalHours()+currentRepairHours-thisWorkOrderContribution}}</span>
+      <!-- <span class="shift-hours" *ngIf="mode==='Add'">{{shiftSavedHours+currentRepairHours}}</span>
+      <span class="shift-hours" *ngIf="mode==='Edit'">{{shiftSavedHours+currentRepairHours-thisWorkOrderContribution}}</span> -->
       <span class="shift-label">{{'of' | translate}}</span>
-      <span class="shift-hours">{{techProfile.shiftLength}}</span>
+      <span class="shift-hours">{{selectedShift.getShiftLength()}}</span>
       </span>
     </div>
 
@@ -54,11 +56,11 @@
         </ion-item>
         <ion-item>
           <ion-label floating>{{'unit_number' | translate}}</ion-label>
-          <ion-input type="text" formControlName="unit_number"></ion-input>
+          <ion-input #unitNumberInput type="text" formControlName="unit_number"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label floating>{{'work_order_number' | translate}}</ion-label>
-          <ion-input type="text" formControlName="work_order_number"></ion-input>
+          <ion-input #workOrderNumberInput type="text" formControlName="work_order_number"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label floating>{{'job_notes' | translate}}</ion-label>
