--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -123,7 +123,7 @@
         </ion-item>
         <ion-item>
           <ion-label class="report-time-label">{{'sick_hours' | translate}}</ion-label>
-          <ion-input class="report-time-input" [disabled]="workOrderForm.value.allDay" formControlName="time" type="number" placeholder="8"></ion-input>
+          <ion-input class="report-time-input" formControlName="time" type="number" placeholder="8"></ion-input>
         </ion-item>
       </ion-list>
 
