--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -8,7 +8,7 @@
   <ion-navbar>
     <ion-title>{{title}}</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only (click)="deleteReport($event, type)" *ngIf="mode=='Edit'">
+      <button ion-button icon-only (tap)="deleteReport($event, type)" *ngIf="mode=='Edit'">
         <ion-icon class="work-order-delete-button" name="ios-trash-outline"></ion-icon>
       </button>
     </ion-buttons>
@@ -22,7 +22,8 @@
         <span class="shift-label">{{'shift' | translate}}</span> #<span class="shift-number">{{selectedShift.updateShiftNumber()}}</span>
       <span class="shift-label">{{'hours' | translate}}</span>:
       <span class="shift-hours" *ngIf="mode==='Add'">{{selectedShift.getNormalHours()+currentRepairHours}}</span>
-      <span class="shift-hours" *ngIf="mode==='Edit'">{{selectedShift.getNormalHours()+currentRepairHours-thisWorkOrderContribution}}</span>
+      <span class="shift-hours" *ngIf="mode==='Edit'">{{selectedShift.getNormalHours()}}</span>
+      <!-- <span class="shift-hours" *ngIf="mode==='Edit'">{{selectedShift.getNormalHours()+currentRepairHours-thisWorkOrderContribution}}</span> -->
       <!-- <span class="shift-hours" *ngIf="mode==='Add'">{{shiftSavedHours+currentRepairHours}}</span>
       <span class="shift-hours" *ngIf="mode==='Edit'">{{shiftSavedHours+currentRepairHours-thisWorkOrderContribution}}</span> -->
       <span class="shift-label">{{'of' | translate}}</span>
@@ -35,13 +36,15 @@
       <ion-list padding>
         <ion-item>
           <ion-label>{{'report_type' | translate}}</ion-label>
-          <ion-select formControlName="type" [disabled]="mode==='Edit'" (click)="checkPageMode()">
-            <ion-option (click)="checkPageMode()" *ngFor="let type of selReportType" [value]="type">{{type.name | translate}}</ion-option>
+          <!-- <ion-select formControlName="type" [disabled]="mode==='Edit'" (tap)="checkPageMode()"> -->
+          <ion-select formControlName="type" (tap)="checkPageMode()">
+            <ion-option (tap)="checkPageMode()" *ngFor="let type of selReportType" [value]="type">{{type.name | translate}}</ion-option>
           </ion-select>
         </ion-item>
-        <ion-item (click)="showFancySelect()" class="item item-button ion-item-button-like">
+        <ion-item (tap)="showFancySelect()" class="item item-button ion-item-button-like">
           <ion-label>{{'shift_date' | translate}}</ion-label>
-          <ion-input #shiftDateResults [disabled]="shiftDateInputDisabled" class="shift-date-select-results" [value]="selectedShift.toString(translate)"></ion-input>
+          <ion-input #shiftDateResults class="shift-date-select-results" [value]="selectedShift.toString(translate)"></ion-input>
+          <!-- <ion-input #shiftDateResults [disabled]="shiftDateInputDisabled" class="shift-date-select-results" [value]="selectedShift.toString(translate)"></ion-input> -->
           <ion-icon item-right class="shift-date-select-icon" name="md-arrow-dropdown"></ion-icon>
         </ion-item>
       </ion-list>
@@ -147,7 +150,7 @@
 
       <button type="submit" ion-button block color="favorite" *ngIf="mode==='Add'">{{'submit_report' | translate}}</button>
       <button type="submit" ion-button block color="favorite" *ngIf="mode==='Edit'">{{'save_report' | translate}}</button>
-      <button type="button" ion-button block color="light" (click)="cancel()">{{'cancel' | translate}}</button>
+      <button type="button" ion-button block color="light" (tap)="cancel()">{{'cancel' | translate}}</button>
     </form>
   </div>
 </ion-content>
