--- a/src/pages/report-history/report-history.html
+++ b/src/pages/report-history/report-history.html
@@ -8,6 +8,9 @@
 <ion-content padding [ngStyle]="{'margin-top': fixedHeight}"> -->
 <!-- <div #fixed ion-fixed></div> -->
 <ion-content padding>
+  <div class="waiting-clock" *ngIf="!pageReady">
+    <clock></clock>
+  </div>
   <div class="report-history-container data-not-ready" *ngIf="!pageReady">
     <ion-list class="reportList data-not-ready">
       <ion-item class="report-history-list-item data-not-ready">
