--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -15,9 +15,14 @@
   </div>
   <ion-list *ngIf="dataReady">
     <ion-item-group>
-      <ion-item-divider color="light">{{'app_info' | translate}} </ion-item-divider>
+      <ion-item-divider class="perfectly-normal-divider" color="light">{{'app_info' | translate}}
+        &nbsp; &nbsp; &nbsp;
+        <button class="perfectly-normal-button" ion-button color="primary" icon-only (tap)="ud.updatePerfectlyNormalEvent($event)">
+          <ion-icon class="perfectly-normal-icon" name="ios-medical-outline"></ion-icon>
+        </button>
+      </ion-item-divider>
       <ion-item>
-        <ion-label>{{'version' | translate}}: {{appName}} (v.{{appVersion}})</ion-label>
+        <ion-label>{{'version' | translate}}: {{appName}} {{appVersion}}</ion-label>
       </ion-item>
     </ion-item-group>
     <ion-item-group>
