--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -15,14 +15,12 @@
   </div>
   <ion-list *ngIf="dataReady">
     <ion-item-group>
-      <ion-item-divider class="perfectly-normal-divider" color="light">{{'app_info' | translate}}
-        &nbsp; &nbsp; &nbsp;
-        <button class="perfectly-normal-button" ion-button color="primary" icon-only (tap)="ud.updatePerfectlyNormalEvent($event)">
-          <ion-icon class="perfectly-normal-icon" name="ios-medical-outline"></ion-icon>
-        </button>
-      </ion-item-divider>
+      <ion-item-divider class="perfectly-normal-divider" color="light">{{'app_info' | translate}}</ion-item-divider>
       <ion-item>
-        <ion-label>{{'version' | translate}}: {{appName}} {{appVersion}}</ion-label>
+        <ion-label>
+          {{'version' | translate}}: {{appName}}
+          <span class="settings-app-version" (tap)="ud.updatePerfectlyNormalEvent($event)">{{appVersion}}</span>
+        </ion-label>
       </ion-item>
     </ion-item-group>
     <ion-item-group>
@@ -59,4 +57,5 @@
     </ion-item-group>
   </ion-list>
 </ion-content>
+<ion-digit-keyboard (buttonClick)="onKeyboardButtonClick()" [visible]="keysetup.visible" [width]="keysetup.width" [swipeToHide]="keysetup.swipeToHide"></ion-digit-keyboard>
 <onsite-tabs></onsite-tabs>
